--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,11 @@
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 5px 0;
+}
+
 .App {
   height: 100vh;
 }
@@ -17,9 +25,25 @@
 ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 
   max-height: 100%;
   overflow-y: auto;
+}
+
+ul.files-list {
+  font-size: 0.9375rem;
+
+  max-height: 80%;
+}
+
+.left-menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.left-menu .labels-list {
+  min-height: 20%;
 }
 
 li.active {
