improved search, now displays file, label and cmds that are match the search

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -28,13 +28,11 @@ ul {
   margin: 0;
 
   max-height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 ul.files-list {
   font-size: 0.9375rem;
-
-  border-bottom: 2px dashed black;
 }
 
 .left-menu {
@@ -42,8 +40,36 @@ ul.files-list {
   flex-direction: column;
 }
 
-.left-menu .labels-list {
-  min-height: 30%;
+.labels-list {
+  min-height: 30%
+}
+
+.search-menu {
+  display: flex;
+  flex-direction: column;
+  margin-right: 0;
+  margin-left: auto;
+  width: 30%;
+  font-size: 0.9375rem;
+}
+
+.search-menu > ul > li {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 2px dashed black;
+}
+.search-menu ul li div:first-child{
+  position: relative;
+}
+
+.search-menu ul li div:first-child{
+  min-width: 70%;
+  max-width: 70%;
+}
+
+.search-menu > input {
+  justify-self: right;
+  width: 50%;
 }
 
 li.active {
